deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-kubes-ingr
  labels:
    app: django-kubes
spec:
  ingressClassName: nginx
  rules:
  - host: gency313.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quart-serv
            port:
              name: quart-port
